--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,12 @@
 		    <artifactId>bootstrap</artifactId>
 		    <version>5.1.3</version>
 		</dependency>
+		<dependency>
+	    <groupId>org.webjars.npm</groupId>
+	    	<artifactId>bootstrap-icons</artifactId>
+	   		 <version>1.7.0</version>
+		</dependency>
+		
 	</dependencies>
 	
 	<build>
