--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,10 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.thymeleaf.extras</groupId>
+			<artifactId>thymeleaf-extras-springsecurity5</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 			<scope>runtime</scope>
@@ -54,6 +58,14 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-rest</artifactId>
+		</dependency>
+		<dependency>
+ 			 <groupId>org.springframework.boot</groupId>
+ 			 <artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
 				<!-- https://mvnrepository.com/artifact/org.webjars/bootstrap -->
 		<dependency>
 		    <groupId>org.webjars</groupId>
@@ -61,7 +73,7 @@
 		    <version>5.1.3</version>
 		</dependency>
 		<dependency>
-	    <groupId>org.webjars.npm</groupId>
+	    	<groupId>org.webjars.npm</groupId>
 	    	<artifactId>bootstrap-icons</artifactId>
 	   		 <version>1.7.0</version>
 		</dependency>
